完善浏览效果

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Q_Comic</string>
+    <string name="app_name">Q漫</string>
 
     <!--Launch-->
     <string name="alter_tip">本程序仅供学习参考使用，严禁任何商业用途</string>
